<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextDolares"
        android:layout_width="116dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextEuros"
        android:layout_width="116dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextDolares"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="@+id/editTextDolares"
        app:layout_constraintTop_toBottomOf="@+id/editTextDolares"
        app:layout_constraintVertical_bias="0.02"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/d_lares"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDolares"
        app:layout_constraintStart_toEndOf="@+id/editTextDolares"
        app:layout_constraintTop_toTopOf="@+id/editTextDolares"
        app:layout_constraintVertical_bias="0.526" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/euros"
        app:layout_constraintBottom_toBottomOf="@+id/editTextEuros"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/editTextEuros" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="146dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextEuros"
        app:layout_constraintTop_toBottomOf="@+id/editTextEuros"
        app:layout_constraintVertical_bias="0.024">

        <RadioButton
            android:id="@+id/radioButtonDolaresAeuros"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/d_lares_a_euros" />

        <RadioButton
            android:id="@+id/radioButtonEurosADolares"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/euros_a_d_lares" />
    </RadioGroup>

    <Button
        android:id="@+id/botonConvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/convertir"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>